fix(pkg): Dependency fixes & optimizations
Switched from tsdx to tsup, which relies on ESBuild rather than TSC for faster transpiling. It also outputs files separately which is useful for code splitting only the files that you need!

Also fixed a few other issues with adding react-native as a dev dependency.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,7 +23,7 @@
 		"importHelpers": true,
 		"declaration": true,
 		"sourceMap": true,
-		"rootDir": ".",
+		"rootDir": "./src",
 		"noUnusedLocals": true,
 		"moduleResolution": "node",
 		"outDir": "dist"
