--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
 	],
 	"sideEffects": false,
 	"main": "dist/index.js",
-	"module": "dist/stashy.esm.js",
+	"module": "dist/index.mjs",
 	"release": {
 		"branches": [
 			"main",
@@ -34,37 +34,28 @@
 		"README.md"
 	],
 	"scripts": {
-		"build": "tsdx build",
-		"format": "tsdx lint src --fix",
-		"lint": "tsdx lint src",
-		"semantic-release": "semantic-release",
-		"start": "tsdx watch",
-		"test": "tsdx test"
-	},
-	"resolutions": {
-		"typescript": "4.6.2"
+		"build": "tsup src --dts --sourcemap --external react-native,react-native-mmkv --format esm,cjs --minify",
+		"semantic-release": "semantic-release"
 	},
 	"dependencies": {
-		"jotai": "1.8.3",
-		"nookies": "^2.5.2",
-		"pino": "^8.5.0",
-		"react-native-mmkv": "^2.4.3"
+		"jotai": "1.8.4",
+		"nookies": "2.5.2",
+		"pino": "8.5.0"
 	},
 	"peerDependencies": {
-		"next": ">=11.0.0",
-		"react-native": ">=0.64.1"
+		"react-native-mmkv": "2.4.3"
 	},
 	"devDependencies": {
+		"@types/next": "^9.0.0",
+		"@types/react": "^18.0.21",
+		"@types/react-native": "^0.70.3",
 		"@typescript-eslint/eslint-plugin": "5.6.0",
 		"@typescript-eslint/parser": "5.6.0",
 		"eslint-plugin-import": "2.25.4",
 		"eslint-plugin-jest": "25.3.0",
-		"next": "^12.3.0",
-		"react-native": "0.69.5",
 		"semantic-release": "18.0.1",
 		"semantic-release-cli": "5.4.4",
-		"tsdx": "^0.14.1",
-		"tslib": "2.3.1",
+		"tsup": "^6.2.3",
 		"typescript": "4.6.2"
 	},
 	"eslint": {
