--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
 	"name": "@waveplay/stashy",
 	"version": "0.0.0-development",
+	"license": "MIT",
 	"private": false,
 	"description": "Flexible storage for Node, React Native, and the browser",
 	"repository": {
@@ -10,7 +11,6 @@
 	"engines": {
 		"node": ">=12"
 	},
-	"license": "MIT",
 	"author": "WavePlay <dev@waveplay.com> (waveplay.com)",
 	"contributors": [
 		"Pkmmte Xeleon <pk@waveplay.com>"
@@ -38,6 +38,7 @@
 		"semantic-release": "semantic-release"
 	},
 	"dependencies": {
+		"@react-native-async-storage/async-storage": "^1.17.10",
 		"jotai": "1.8.4",
 		"nookies": "2.5.2",
 		"pino": "8.5.0"
