patch: jotai now listed as peer dependency
Less bloat for those that don't need this optional feature.

BREAKING CHANGE: Users that relied on Stashy to install Jotai will now need to install it directly if they're using it!

--- a/package.json
+++ b/package.json
@@ -35,12 +35,12 @@
 	},
 	"dependencies": {
 		"@react-native-async-storage/async-storage": "^1.17.10",
-		"jotai": "1.8.4",
 		"nookies": "2.5.2",
 		"pino": "8.5.0"
 	},
 	"peerDependencies": {
-		"react-native-mmkv": "2.4.3"
+		"jotai": ">=1.8.4",
+		"react-native-mmkv": ">=2.4.3"
 	},
 	"devDependencies": {
 		"@types/next": "^9.0.0",
