--- a/package.json
+++ b/package.json
@@ -35,8 +35,7 @@
 	},
 	"dependencies": {
 		"@react-native-async-storage/async-storage": "^1.17.10",
-		"nookies": "2.5.2",
-		"pino": "8.5.0"
+		"nookies": "2.5.2"
 	},
 	"peerDependencies": {
 		"jotai": ">=1.8.4",
