feat: convenient backend exports
Similar to Jotai integration, these can now be imported at the top level now!

--- a/package.json
+++ b/package.json
@@ -22,8 +22,9 @@
 		"access": "public"
 	},
 	"files": [
-		"src/",
+		"backend/",
 		"dist/",
+		"src/",
 		"jotai.js",
 		"jotai.d.ts",
 		"LICENSE",
