--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -14,28 +14,30 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
+
       - name: Read Node.js version to install from `.nvmrc`
         run: echo "##[set-output name=NVMRC;]$(cat .nvmrc)"
         id: nvm
+
+      - uses: pnpm/action-setup@v2.2.4
+        with:
+          version: 7
+
       - name: Install required Node.js version
         uses: actions/setup-node@v1
         with:
+          cache: 'pnpm'
           node-version: "${{ steps.nvm.outputs.NVMRC }}"
-      - name: Get Yarn cache directory path
-        id: yarn-cache
-        run: echo "::set-output name=dir::$(yarn cache dir)"
-      - name: Setup cache key and directory for node_modules cache
-        uses: actions/cache@v2
-        with:
-          path: ${{ steps.yarn-cache.outputs.dir }}
-          key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
-      - name: Yarn install
-        run: yarn --frozen-lockfile
+
+      - name: PNPM install
+        run: pnpm install --frozen-lockfile
+
       - name: Build
-        run: yarn build
+        run: pnpm build
+
       - name: Release
         if: github.event_name == 'push' && (github.ref == 'refs/heads/main' || github.ref == 'refs/heads/master' || github.ref == 'refs/heads/beta')
-        run: yarn semantic-release
+        run: pnpm semantic-release
         env:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
