--- a/package.json
+++ b/package.json
@@ -42,14 +42,22 @@
 		"jotai": ">=1.8.4",
 		"react-native-mmkv": ">=2.4.3"
 	},
+	"peerDependenciesMeta": {
+		"jotai": {
+			"optional": true
+		},
+		"react-native-mmkv": {
+			"optional": true
+		}
+	},
 	"devDependencies": {
-		"@types/next": "^9.0.0",
 		"@types/react": "^18.0.21",
 		"@types/react-native": "^0.70.3",
 		"@typescript-eslint/eslint-plugin": "5.6.0",
 		"@typescript-eslint/parser": "5.6.0",
 		"eslint-plugin-import": "2.25.4",
 		"eslint-plugin-jest": "25.3.0",
+		"next": "^13.0.7",
 		"semantic-release": "18.0.1",
 		"semantic-release-cli": "5.4.4",
 		"tsup": "^6.2.3",
