chore: integrations directory & tsup config file
Moved Jotai file into integrations directory to keep things separate. TSUP builds now use config file instead of direct CLI commands.

--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
 		"README.md"
 	],
 	"scripts": {
-		"build": "tsup src --dts --sourcemap --external react-native,react-native-mmkv --format esm,cjs --minify",
+		"build": "tsup",
 		"semantic-release": "semantic-release"
 	},
 	"dependencies": {
