--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
 		"semantic-release": "semantic-release"
 	},
 	"dependencies": {
-		"@react-native-async-storage/async-storage": "^1.17.10",
+		"@react-native-async-storage/async-storage": "1.17.11",
 		"nookies": "2.5.2"
 	},
 	"peerDependencies": {
@@ -51,17 +51,17 @@
 		}
 	},
 	"devDependencies": {
-		"@types/react": "^18.0.21",
-		"@types/react-native": "^0.70.3",
-		"@typescript-eslint/eslint-plugin": "5.6.0",
-		"@typescript-eslint/parser": "5.6.0",
-		"eslint-plugin-import": "2.25.4",
-		"eslint-plugin-jest": "25.3.0",
+		"@types/react": "18.0.26",
+		"@types/react-native": "0.70.8",
+		"@typescript-eslint/eslint-plugin": "5.46.1",
+		"@typescript-eslint/parser": "5.46.1",
+		"eslint-plugin-import": "2.26.0",
+		"eslint-plugin-jest": "27.1.7",
 		"next": "^13.0.7",
-		"semantic-release": "18.0.1",
+		"semantic-release": "19.0.5",
 		"semantic-release-cli": "5.4.4",
-		"tsup": "^6.2.3",
-		"typescript": "4.6.2"
+		"tsup": "6.5.0",
+		"typescript": "4.9.4"
 	},
 	"eslint": {
 		"env": {
