--- a/package.json
+++ b/package.json
@@ -32,6 +32,10 @@
 	],
 	"scripts": {
 		"build": "tsup",
+		"lint": "pnpm lint:eslint && pnpm lint:language && pnpm lint:style",
+		"lint:eslint": "eslint . --ext js,jsx,ts,tsx --max-warnings=0 --config .eslintrc.json --no-eslintrc",
+		"lint:language": "alex .",
+		"lint:style": "prettier --write .",
 		"semantic-release": "semantic-release"
 	},
 	"dependencies": {
@@ -51,60 +55,26 @@
 		}
 	},
 	"devDependencies": {
+		"@babel/core": "^7.20.5",
+		"@babel/eslint-parser": "^7.19.1",
+		"@babel/preset-react": "^7.18.6",
 		"@types/react": "18.0.26",
 		"@types/react-native": "0.70.8",
 		"@typescript-eslint/eslint-plugin": "5.46.1",
 		"@typescript-eslint/parser": "5.46.1",
+		"alex": "11.0.0",
+		"eslint": "8.29.0",
+		"eslint-plugin-eslint-plugin": "^5.0.6",
 		"eslint-plugin-import": "2.26.0",
 		"eslint-plugin-jest": "27.1.7",
-		"next": "^13.0.7",
+		"eslint-plugin-react": "^7.31.11",
+		"eslint-plugin-react-hooks": "^4.6.0",
+		"next": "13.0.7",
+		"prettier": "2.8.1",
 		"semantic-release": "19.0.5",
 		"semantic-release-cli": "5.4.4",
 		"tsup": "6.5.0",
+		"turbo": "1.6.3",
 		"typescript": "4.9.4"
-	},
-	"eslint": {
-		"env": {
-			"es6": true,
-			"jest": true,
-			"node": true
-		},
-		"parser": "@typescript-eslint/parser",
-		"parserOptions": {
-			"ecmaVersion": 2019,
-			"sourceType": "module"
-		},
-		"extends": [
-			"eslint:recommended",
-			"plugin:jest/recommended",
-			"plugin:import/recommended",
-			"plugin:@typescript-eslint/eslint-recommended",
-			"plugin:@typescript-eslint/recommended"
-		],
-		"rules": {
-			"arrow-body-style": [
-				"error",
-				"always"
-			],
-			"curly": "error",
-			"import/order": [
-				"error",
-				{
-					"newlines-between": "always"
-				}
-			]
-		},
-		"settings": {
-			"import/extensions": [
-				".ts"
-			],
-			"import/resolver": {
-				"node": {
-					"extensions": [
-						".ts"
-					]
-				}
-			}
-		}
 	}
 }
