chore: updated example project
Now uses latest version of Stashy alongside a managed Pilot.js project.

This will be extra important for testing out the EnvBackend feature.

--- a/examples/basic-example/app.json
+++ b/examples/basic-example/app.json
@@ -1,35 +1,36 @@
 {
-  "expo": {
-    "name": "Stashy: Basic example",
-    "slug": "stashy-basic-example",
-    "version": "1.0.0",
-    "orientation": "portrait",
-    "icon": "./assets/icon.png",
-    "userInterfaceStyle": "light",
-    "splash": {
-      "image": "./assets/splash.png",
-      "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
-    },
-    "updates": {
-      "fallbackToCacheTimeout": 0
-    },
-    "assetBundlePatterns": [
-      "**/*"
-    ],
-    "ios": {
-      "supportsTablet": true,
-      "bundleIdentifier": "com.waveplay.stashybasicexample"
-    },
-    "android": {
-      "adaptiveIcon": {
-        "foregroundImage": "./assets/adaptive-icon.png",
-        "backgroundColor": "#FFFFFF"
-      },
-      "package": "com.waveplay.stashybasicexample"
-    },
-    "web": {
-      "favicon": "./assets/favicon.png"
-    }
-  }
+	"expo": {
+		"name": "Stashy: Basic example",
+		"slug": "stashy-basic-example",
+		"version": "1.0.0",
+		"orientation": "portrait",
+		"icon": "./assets/icon.png",
+		"userInterfaceStyle": "light",
+		"entryPoint": "node_modules/@waveplay/pilot/AppEntry.js",
+		"splash": {
+			"image": "./assets/splash.png",
+			"resizeMode": "contain",
+			"backgroundColor": "#ffffff"
+		},
+		"updates": {
+			"fallbackToCacheTimeout": 0
+		},
+		"assetBundlePatterns": [
+			"**/*"
+		],
+		"ios": {
+			"supportsTablet": true,
+			"bundleIdentifier": "com.waveplay.stashybasicexample"
+		},
+		"android": {
+			"adaptiveIcon": {
+				"foregroundImage": "./assets/adaptive-icon.png",
+				"backgroundColor": "#FFFFFF"
+			},
+			"package": "com.waveplay.stashybasicexample"
+		},
+		"web": {
+			"favicon": "./assets/favicon.png"
+		}
+	}
 }
