--- a/examples/basic-example/package.json
+++ b/examples/basic-example/package.json
@@ -1,41 +1,37 @@
 {
-  "name": "stashy-example",
-  "version": "1.0.0",
-  "license": "MIT",
-  "scripts": {
-    "build:next": "next build",
-    "start:expo": "expo start",
-    "start:next": "next dev",
-    "start": "expo start --dev-client",
-    "android": "expo run:android",
-    "ios": "expo run:ios"
-  },
-  "dependencies": {
-    "@expo/next-adapter": "4.0.12",
-    "@react-native-async-storage/async-storage": "^1.17.10",
-    "@waveplay/pilot": "1.1.0",
-    "@waveplay/stashy": "1.3.2",
-    "expo": "~46.0.9",
-    "expo-splash-screen": "~0.16.2",
-    "expo-status-bar": "~1.4.0",
-    "next": "12.2.5",
-    "nookies": "^2.5.2",
-    "react": "18.0.0",
-    "react-dom": "18.0.0",
-    "react-native": "0.69.5",
-    "react-native-safe-area-context": "4.3.1",
-    "react-native-web": "0.18.9"
-  },
-  "devDependencies": {
-    "@babel/core": "7.12.9",
-    "@nissy-dev/swc-plugin-react-native-web": "0.2.4",
-    "@types/react": "^18.0.21",
-    "@types/react-dom": "^18.0.6",
-    "@types/react-native": "0.69.5",
-    "next-build-id": "3.0.0",
-    "next-compose-plugins": "2.2.1",
-    "next-transpile-modules": "9.0.0",
-    "typescript": "^4.8.3",
-    "webpack": "5.74.0"
-  }
+	"name": "stashy-example",
+	"version": "1.0.0",
+	"license": "MIT",
+	"scripts": {
+		"build:next": "next build",
+		"build:pilot": "pilot build",
+		"dev": "pilot dev",
+		"dev:native": "expo start",
+		"dev:web": "next dev",
+		"start:native": "expo start",
+		"start:web": "next start"
+	},
+	"dependencies": {
+		"@react-native-async-storage/async-storage": "1.17.11",
+		"@waveplay/pilot": "0.0.0-canary-20221214053754",
+		"@waveplay/stashy": "2.0.0-beta.4",
+		"expo": "47.0.0",
+		"next": "13.0.4",
+		"nookies": "2.5.2",
+		"react": "18.1.0",
+		"react-dom": "18.1.0",
+		"react-native": "0.69.5",
+		"react-native-safe-area-context": "4.4.1",
+		"react-native-web": "0.18.9"
+	},
+	"devDependencies": {
+		"@babel/core": "^7.20.5",
+		"@nissy-dev/swc-plugin-react-native-web": "^0.3.0",
+		"@types/react": "^18.0.26",
+		"@types/react-dom": "^18.0.9",
+		"@types/react-native": "^0.70.8",
+		"next-transpile-modules": "^10.0.0",
+		"typescript": "^4.9.4",
+		"webpack": "^5.75.0"
+	}
 }
