--- a/examples/basic-example/tsconfig.json
+++ b/examples/basic-example/tsconfig.json
@@ -3,11 +3,7 @@
 	"compilerOptions": {
 		"incremental": true,
 		"target": "ES2017",
-		"lib": [
-			"dom",
-			"dom.iterable",
-			"esnext"
-		],
+		"lib": ["dom", "dom.iterable", "esnext"],
 		"baseUrl": ".",
 		"paths": {
 			"react-native$": ["react-native-web"]
@@ -36,9 +32,5 @@
 		"metro.config.js",
 		"jest.config.js"
 	],
-	"include": [
-		"next-env.d.ts",
-		"**/*.ts",
-		"**/*.tsx"
-	]
+	"include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"]
 }
