--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,11 +3,7 @@
 	"compilerOptions": {
 		"target": "es2018",
 		"module": "esnext",
-		"lib": [
-			"dom",
-			"dom.iterable",
-			"esnext"
-		],
+		"lib": ["dom", "dom.iterable", "esnext"],
 		"baseUrl": ".",
 		"allowJs": true,
 		"skipLibCheck": true,
