--- a/examples/basic-example/app.json
+++ b/examples/basic-example/app.json
@@ -6,7 +6,7 @@
 		"orientation": "portrait",
 		"icon": "./assets/icon.png",
 		"userInterfaceStyle": "light",
-		"entryPoint": "node_modules/@waveplay/pilot/AppEntry.js",
+		"entryPoint": "AppEntry.tsx",
 		"splash": {
 			"image": "./assets/splash.png",
 			"resizeMode": "contain",
