--- a/.gitignore
+++ b/.gitignore
@@ -72,6 +72,10 @@ typings/
 .env
 .env.test
 
+# Don't exclude the .env file in basic example
+# Please don't do this in your projects with sensitive data, this is just for the example
+!examples/basic-example/.env
+
 # parcel-bundler cache (https://parceljs.org/)
 .cache
 
