--- a/examples/basic-example/package.json
+++ b/examples/basic-example/package.json
@@ -12,9 +12,9 @@
 		"start:web": "next start"
 	},
 	"dependencies": {
-		"@react-native-async-storage/async-storage": "1.17.11",
+		"@react-native-async-storage/async-storage": "^1.17.11",
 		"@waveplay/pilot": "0.0.0-canary-20221214053754",
-		"@waveplay/stashy": "2.0.0-beta.4",
+		"@waveplay/stashy": "^2.0.0-beta.7",
 		"expo": "47.0.0",
 		"next": "13.0.4",
 		"nookies": "2.5.2",
