--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
 		"eslint-plugin-react": "^7.31.11",
 		"eslint-plugin-react-hooks": "^4.6.0",
 		"next": "13.0.7",
+		"npm": "^9.2.0",
 		"prettier": "2.8.1",
 		"semantic-release": "19.0.5",
 		"semantic-release-cli": "5.4.4",
