--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
 		"lint:eslint": "eslint . --ext js,jsx,ts,tsx --max-warnings=0 --config .eslintrc.json --no-eslintrc",
 		"lint:language": "alex .",
 		"lint:style": "prettier --write .",
-		"semantic-release": "pnpm lint && turbo run build && semantic-release"
+		"semantic-release": "semantic-release"
 	},
 	"dependencies": {
 		"@react-native-async-storage/async-storage": "1.17.11",
