--- a/examples/basic-example/package.json
+++ b/examples/basic-example/package.json
@@ -14,7 +14,7 @@
 	"dependencies": {
 		"@react-native-async-storage/async-storage": "^1.17.11",
 		"@waveplay/pilot": "0.0.0-canary-20221214053754",
-		"@waveplay/stashy": "^2.0.0-beta.7",
+		"@waveplay/stashy": "2.0.0",
 		"expo": "47.0.0",
 		"next": "13.0.4",
 		"nookies": "2.5.2",
